<resources>
    <string name="app_name">UsingBroadcastReceiver</string>
    <string name="send_broadcast">发送广播</string>
    <string name="register_broadcast_receiver">动态注册广播接收器 1</string>
    <string name="register_broadcast_receiver2">动态注册广播接收器 2</string>
    <string name="unregister_broadcast_receiver">动态注销广播接收器 1</string>
    <string name="unregister_broadcast_receiver2">动态注销广播接收器 2</string>
</resources>
