<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.plter.usingbroadcastreceiver.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!" />

    <Button
        android:id="@+id/btnSendBroadcast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_broadcast" />

    <Button
        android:id="@+id/btnRegisterBroadcastReceiver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_broadcast_receiver" />

    <Button
        android:id="@+id/btnUnregisterBroadcastReceiver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unregister_broadcast_receiver" />

    <Button
        android:id="@+id/btnRegisterBroadcastReceiver2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_broadcast_receiver2" />

    <Button
        android:id="@+id/btnUnregisterBroadcastReceiver2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unregister_broadcast_receiver2" />

</LinearLayout>
